# Text-mining

./: README.md  pyproject.toml
assets/: space_doc.jsonl
chatbot_assignment/: app.py  config.py  dqm.py  embedding.py
webapp/: app.js  index.html  style.css
